--- a/style.css
+++ b/style.css
@@ -18,11 +18,12 @@ body {
     place-content: center;
     place-items: center;
     min-height: 100vh;
+    min-height: 100dvh;
     text-align: center;
     font-family: 'Recursive', serif;
     font-weight: 400;
-    font-size: 24px;
     padding-block: 2rem;
+    padding-bottom: 5rem;
     background-color: #f5f5f5;
     color: hsl(0, 0%, 25%);
 }
@@ -148,7 +149,7 @@ code .css-function {
     transform: scale(.95);
 }
 
-@media screen and (width < 420px) {
+@media screen and (width < 440px) {
     .code-container {
         font-size: .75rem;
     }
@@ -159,6 +160,7 @@ code .css-function {
 
     .parent p {
         font-size: .75rem;
+        padding: .5rem;
     }
 
     .btn-copy-code>svg {
@@ -211,6 +213,7 @@ code .css-function {
     padding: .5rem;
     border-radius: .25rem;
     background-color: #f5f5f5;
+    font-size: 1rem;
     font-size: var(--font-size);
 }
 
