--- a/style.css
+++ b/style.css
@@ -28,6 +28,22 @@ body {
     color: hsl(0, 0%, 25%);
 }
 
+.info-own {
+    font-size: .875rem;
+    display: flex;
+    align-items: center;
+    padding: 1.5rem;
+    position: fixed;
+    top: 4rem;
+    gap: .5rem;
+}
+
+.info-own .link {
+    font-weight: 500;
+    color: #eb621e;
+    text-decoration: underline wavy 1px currentColor;
+}
+
 
 /* Parent */
 .parent {
@@ -254,4 +270,3 @@ code .css-function {
     background: #fff0f5;
     border-bottom: 3px dashed #daa520;
 }
-
