--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
     padding-bottom: 5rem;
     background-color: #f5f5f5;
     color: hsl(0, 0%, 25%);
+    overflow-x: hidden;
 }
 
 .info-own {
@@ -36,6 +37,9 @@ body {
     position: fixed;
     top: 4rem;
     gap: .5rem;
+    z-index: 10;
+    border-radius: .25rem;
+    background-color: #f5f5f5
 }
 
 .info-own .link {
