add animation to highlight inputs

--- a/style.css
+++ b/style.css
@@ -22,8 +22,7 @@ body {
     text-align: center;
     font-family: 'Recursive', serif;
     font-weight: 400;
-    padding-block: 2rem;
-    padding-bottom: 5rem;
+    padding-block: 5rem;
     background-color: #f5f5f5;
     color: hsl(0, 0%, 25%);
     overflow-x: hidden;
@@ -31,15 +30,18 @@ body {
 
 .info-own {
     font-size: .875rem;
+    width: 100%;
     display: flex;
     align-items: center;
-    padding: 1.5rem;
-    position: fixed;
-    top: 4rem;
+    justify-content: center;
+    padding: 1rem 1.5rem;
+    position: absolute;
+    bottom: 110%;
     gap: .5rem;
     z-index: 10;
     border-radius: .25rem;
-    background-color: #f5f5f5
+    background-color: #f5f5f5;
+    text-align: left;
 }
 
 .info-own .link {
@@ -58,6 +60,7 @@ body {
     grid-template-columns: 1fr auto 1fr;
     align-items: center;
     margin-bottom: 2rem;
+    position: relative;
 }
 
 .line {
@@ -66,7 +69,7 @@ body {
     background-color: var(--bd-color);
 }
 
-.parent p {
+.parent > p {
     background: hsl(0, 0%, 98%);
     backdrop-filter: blur(30px);
     border-radius: .25rem;
@@ -142,6 +145,27 @@ input[type="number"] {
     padding: .15rem .25rem;
     border-radius: .25rem;
     background-color: hsl(0, 0%, 92%);
+}
+
+.input.animation {
+    animation: highlight 500ms ease;
+}
+
+.input.animation.ideal {
+    animation-delay: 1000ms;
+}
+
+.input.animation.max {
+    animation-delay: 1500ms
+}
+
+@keyframes highlight {
+    50% {
+        outline: 2px dashed #eb621e;
+    }
+    100% {
+        outline: 1px solid transparent;
+    }
 }
 
 .output-code .highlight {
